# hass-unifi-access

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.history/: .gitignore_20251021173152  .gitignore_20251021180458  PR_DESCRIPTION_20251021173141.md  PR_DESCRIPTION_20251021173433.md  PR_DESCRIPTION_20251021173442.md  PR_DESCRIPTION_20251021173848.md  PR_DESCRIPTION_20251021180458.md  README_20251021181313.md  README_20251021181326.md  README_20251021181341.md  README_20251021181350.md  UNICODE_FIX_DOCUMENTATION_20251021172334.md  UNICODE_FIX_README_20251021172537.md  WEBSOCKET_PR_DESCRIPTION_20251021180458.md  test_hub_function_20251021172405.py  test_normalize_function_20251021172433.py  test_unicode_20251021172319.py  test_unicode_fix_20251021172024.py  test_user_management_20251021180943.py  test_user_management_20251021181038.py  test_user_management_20251021181108.py
.history/custom_components/unifi_access/: __init___20251021180641.py  __init___20251021180650.py  __init___20251021180706.py  __init___20251021180719.py  __init___20251021180943.py  const_20251021180158.py  coordinator_20251021180453.py  hub_20251021171805.py  hub_20251021171822.py  hub_20251021171840.py  hub_20251021171904.py  hub_20251021171911.py  hub_20251021171925.py  hub_20251021180336.py  hub_20251021180343.py  hub_20251021180349.py  hub_20251021180355.py  hub_20251021180412.py  hub_20251021181009.py  hub_20251021181016.py  hub_20251021181133.py  manifest_20251021173337.json  manifest_20251021173513.json  manifest_20251021180943.json  services_20251021180943.yaml  switch_20251021180459.py  switch_20251021180510.py  user_20251021180458.py  user_20251021180902.py  user_20251021180942.py  user_20251021180956.py
custom_components/unifi_access/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostics.py  door.py  entity.py  errors.py  event.py  hub.py  icons.json  image.py  lock.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/unifi_access/translations/: de.json  en.json  it.json  nl.json  zh-Hans.json
py-unifi-access/: README.md  pyproject.toml
py-unifi-access/unifi_access_api/: __init__.py  client.py  const.py  door.py  errors.py
tests/: __init__.py  conftest.py  test_api_client_handlers.py  test_config_flow.py  test_diagnostics.py  test_entities.py  test_face_unlock.py  test_hub.py  test_hub_handlers.py  test_init.py  test_services.py
